refactor: config.js (and update scripts) + new start-up/check scripts
Includes:

  - yarn start-all/stop-all: start and stop all databases with start.sh scripts in their
    dev/dialects/<version> sub-directories

  - yarn test-all runs `prepare` and `test-typings` once, then runs the other tests for
    each dialect and version

Details:

  1. Running tests against each database version (while running in paralled) requires a
     couple things:
       (1) the databases must run on different ports
       (2) there needs to be a way to pass opt-in versions to the test

     The minimally-intrusive (least amount of additional typing) way was to coerce the
     dialect value to now include version numbers. The version numbers are now concatenated
     to the end of the dialect name. There are no delimiters except inside the version
     number itself, which follows semver.  Example: `DIALECT=mysql5.7 yarn test`

     The minor version isn't necessary as it as the Config function will perform a lookup
     to find best matches. $DIALECT is parsed by Support.js and Config.js with new functions
     to assist. Some dialects, like db2, end numeric.  That special case is manually checked.

  2. There are now fallbacks for *-native (e.g., postgres-native) to run on their default
     ports, or can be updated via the environment variable (e.g., SEQ_PORT). Though not tested
     this may also open a way to test `mysql-native` and other variations, not previously
     included in package.json scripts.

  3. There is smart matching if a major version is supplied. Example: DIALECT=mysql5 will look through
     the list of database configurations and choose the highest that matches or equals it. If both 5.7
     and 5.2 configurations exist, it will choose 5.7.

  4. When database version is not supplied, for instance DIALECT=postgres, the config will attempt to
     retrieve the port from the most recent Docker container of that dialect. This means there is
     now a dependency 

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/lodash": "4.14.182",
     "@types/mocha": "9.1.1",
     "@types/node": "16.11.38",
+    "@types/semver": "^7.3.9",
     "@types/sinon": "10.0.11",
     "@types/sinon-chai": "3.2.8",
     "@types/uuid": "8.3.4",
@@ -225,19 +226,25 @@
     "cover-integration": "cross-env COVERAGE=true nyc --reporter=lcovonly yarn mocha \"test/integration/**/*.test.[tj]s\" && node -e \"require('fs').renameSync('coverage/lcov.info', 'coverage/integration.info')\"",
     "cover-unit": "cross-env COVERAGE=true nyc --reporter=lcovonly yarn mocha \"test/unit/**/*.test.[tj]s\" && node -e \"require('fs').renameSync('coverage/lcov.info', 'coverage/unit.info')\"",
     "merge-coverage": "lcov-result-merger \"coverage/*.info\" \"coverage/lcov.info\"",
-    "----------------------------------------- local test dbs ------------------------------------------": "",
-    "start-mariadb": "bash dev/mariadb/10.3/start.sh",
-    "start-mysql": "bash dev/mysql/5.7/start.sh",
-    "start-mysql-8": "bash dev/mysql/8.0/start.sh",
-    "start-postgres": "bash dev/postgres/10/start.sh",
-    "start-mssql": "bash dev/mssql/2019/start.sh",
-    "start-db2": "bash dev/db2/11.5/start.sh",
-    "stop-mariadb": "bash dev/mariadb/10.3/stop.sh",
-    "stop-mysql": "bash dev/mysql/5.7/stop.sh",
-    "stop-mysql-8": "bash dev/mysql/8.0/stop.sh",
-    "stop-postgres": "bash dev/postgres/10/stop.sh",
-    "stop-mssql": "bash dev/mssql/2019/stop.sh",
-    "stop-db2": "bash dev/db2/11.5/stop.sh",
+    "----------------------------------------- bulk tests ------------------------------------------": "",
+    "start-all": "ts-node dev/start-all.ts",
+    "test-all": "ts-node dev/test-all.ts",
+    "stop-all": "ts-node dev/stop-all.ts",
+    "----------------------------------------- database containers -------------------------------------": "",
+    "start-mariadb": "bash dev/dialects/mariadb/10.3/start.sh",
+    "start-mysql": "bash dev/dialects/mysql/5.7/start.sh",
+    "start-mysql-8": "bash dev/dialects/mysql/8.0/start.sh",
+    "start-postgres": "bash dev/dialects/postgres/12/start.sh",
+    "start-postgres-10": "bash dev/dialects/postgres/10/start.sh",
+    "start-mssql": "bash dev/dialects/mssql/2019/start.sh",
+    "start-db2": "bash dev/dialects/db2/11.5/start.sh",
+    "stop-mariadb": "bash dev/dialects/mariadb/10.3/stop.sh",
+    "stop-mysql": "bash dev/dialects/mysql/5.7/stop.sh",
+    "stop-mysql-8": "bash dev/dialects/mysql/8.0/stop.sh",
+    "stop-postgres": "bash dev/dialects/postgres/12/stop.sh",
+    "stop-postgres-10": "bash dev/dialects/postgres/10/stop.sh",
+    "stop-mssql": "bash dev/dialects/mssql/2019/stop.sh",
+    "stop-db2": "bash dev/dialects/db2/11.5/stop.sh",
     "restart-mariadb": "yarn start-mariadb",
     "restart-mysql": "yarn start-mysql",
     "restart-postgres": "yarn start-postgres",
