--- a/package.json
+++ b/package.json
@@ -230,15 +230,15 @@
     "start-mysql": "bash dev/mysql/5.7/start.sh",
     "start-mysql-8": "bash dev/mysql/8.0/start.sh",
     "start-postgres": "bash dev/postgres/10/start.sh",
-    "start-mssql-oldest": "bash dev/mssql/2017/start.sh",
-    "start-mssql-latest": "bash dev/mssql/2022/start.sh",
+    "start-mssql-oldest": "bash dev/mssql/oldest/start.sh",
+    "start-mssql-latest": "bash dev/mssql/latest/start.sh",
     "start-db2": "bash dev/db2/11.5/start.sh",
     "stop-mariadb": "bash dev/mariadb/10.3/stop.sh",
     "stop-mysql": "bash dev/mysql/5.7/stop.sh",
     "stop-mysql-8": "bash dev/mysql/8.0/stop.sh",
     "stop-postgres": "bash dev/postgres/10/stop.sh",
-    "stop-mssql-oldest": "bash dev/mssql/2017/stop.sh",
-    "stop-mssql-latest": "bash dev/mssql/2022/stop.sh",
+    "stop-mssql-oldest": "bash dev/mssql/oldest/stop.sh",
+    "stop-mssql-latest": "bash dev/mssql/latest/stop.sh",
     "stop-db2": "bash dev/db2/11.5/stop.sh",
     "restart-mariadb": "yarn start-mariadb",
     "restart-mysql": "yarn start-mysql",
