--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "source-map-support": "0.5.21",
     "sqlite3": "5.0.8",
     "tedious": "14.4.0",
+    "ts-node": "10.8.1",
     "typedoc": "0.22.17",
     "typescript": "4.7.3"
   },
