--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -268,6 +268,7 @@ jobs:
       SEQ_ORACLE_HOST: localhost
       SEQ_ORACLE_PORT: 1521
       UV_THREADPOOL_SIZE: 128
+      LD_LIBRARY_PATH: ~/oracle/instantclient/
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
