--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
       "default": "./lib/errors/index.js",
       "types": "./types/errors/index.d.ts"
     },
-    "./*": "./*"
+    "./package.json": "./package.json"
   },
   "engines": {
     "node": ">=10.0.0"
