feat: exports types to support typescript >= 4.5 nodenext module (#14620)
* feat: exports types to support typescript >= 4.5 nodenext module(v6)

* feat: add lib,errors types in exports

* feat: exports types to support typescript >= 4.5 nodenext module

Co-authored-by: Zoé <zoe@ephys.dev>

--- a/package.json
+++ b/package.json
@@ -22,11 +22,18 @@
   "exports": {
     ".": {
       "import": "./lib/index.mjs",
-      "require": "./lib/index.js"
+      "require": "./lib/index.js",
+      "types": "./types/index.d.ts"
     },
-    "./lib/*": "./lib/*.js",
-    "./lib/errors": "./lib/errors/index.js",
-    "./*": "./*"
+    "./lib/*": {
+      "default": "./lib/*.js",
+      "types": "./types/*.d.ts"
+    },
+    "./lib/errors": {
+      "default": "./lib/errors/index.js",
+      "types": "./types/errors/index.d.ts"
+    },
+    "./package.json": "./package.json"
   },
   "engines": {
     "node": ">=10.0.0"
