--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/lodash": "4.14.182",
     "@types/mocha": "9.1.1",
     "@types/node": "16.11.41",
+    "@types/semver": "^7.3.10",
     "@types/sinon": "10.0.11",
     "@types/sinon-chai": "3.2.8",
     "@types/uuid": "8.3.4",
