fix: - incorporated review comments on CI - update node version to 18 - use $GITHUB_WORKSPACE/.oracle to install inst client rather than $HOME. For macos, its still $HOME/Downloads because of the script that comes up IC image - Add .oracle to gitignore list - checkout, setup-node versions to v3 - use 21.3 oracle docker image than latest - For standalone yarn start-oracle , which is not from CI, GITHUB_WORKSPACE is not defined, so we depend on current dir to install IC, for CI we use GITHUB_WORKSPACE - env passed from ci.yml and removed in package.json

--- a/dev/oracle/latest/docker-compose.yml
+++ b/dev/oracle/latest/docker-compose.yml
@@ -3,7 +3,7 @@
 services:
   oraclexedb:
     container_name: oraclexedb
-    image: gvenzl/oracle-xe:latest
+    image: gvenzl/oracle-xe:21.3.0
     environment:
       ORACLE_PASSWORD: password
     ports:
