meta: replace build,chore,test with meta

--- a/.github/workflows/pr-title.yml
+++ b/.github/workflows/pr-title.yml
@@ -18,9 +18,7 @@ jobs:
             fix
             feat
             docs
-            chore
-            build
-            test
+            meta
           scopes: |
             db2
             ibmi
