--- a/dev/oracle/latest/docker-compose.yml
+++ b/dev/oracle/latest/docker-compose.yml
@@ -3,7 +3,7 @@
 services:
   oraclexedb:
     container_name: oraclexedb
-    image: gvenzl/oracle-xe:latest
+    image: gvenzl/oracle-xe:21-slim
     environment:
       ORACLE_PASSWORD: password
     ports:
