--- a/package.json
+++ b/package.json
@@ -244,14 +244,14 @@
     "start-postgres": "bash dev/postgres/10/start.sh",
     "start-mssql": "bash dev/mssql/2019/start.sh",
     "start-db2": "bash dev/db2/11.5/start.sh",
-    "start-oracle": "bash dev/oracle/latest/start.sh",
+    "start-oracle": "bash dev/oracle/21-slim/start.sh",
     "stop-mariadb": "bash dev/mariadb/10.3/stop.sh",
     "stop-mysql": "bash dev/mysql/5.7/stop.sh",
     "stop-mysql-8": "bash dev/mysql/8.0/stop.sh",
     "stop-postgres": "bash dev/postgres/10/stop.sh",
     "stop-mssql": "bash dev/mssql/2019/stop.sh",
     "stop-db2": "bash dev/db2/11.5/stop.sh",
-    "stop-oracle": "bash dev/oracle/latest/stop.sh",
+    "stop-oracle": "bash dev/oracle/21-slim/stop.sh",
     "restart-mariadb": "npm run start-mariadb",
     "restart-mysql": "npm run start-mysql",
     "restart-postgres": "npm run start-postgres",
