--- a/dev/postgres/oldest/docker-compose.yml
+++ b/dev/postgres/oldest/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
-  postgres-10:
-    container_name: sequelize-postgres-10
-    image: sushantdhiman/postgres:10
+  postgres-oldest:
+    container_name: sequelize-postgres-oldest
+    image: postgis/postgis:10-2.5
     environment:
       POSTGRES_USER: sequelize_test
       POSTGRES_PASSWORD: sequelize_test
@@ -16,4 +16,4 @@ services:
 
 networks:
   default:
-    name: sequelize-postgres-10-network
+    name: sequelize-postgres-oldest-network
