--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "chai-as-promised": "7.1.1",
     "chai-datetime": "1.8.0",
     "cls-hooked": "4.2.2",
+    "concurrently": "^7.2.2",
     "copyfiles": "2.4.1",
     "cross-env": "7.0.3",
     "delay": "5.0.0",
@@ -206,27 +207,25 @@
     "cover-unit": "cross-env COVERAGE=true nyc --reporter=lcovonly yarn mocha \"test/unit/**/*.test.[tj]s\" && node -e \"require('fs').renameSync('coverage/lcov.info', 'coverage/unit.info')\"",
     "merge-coverage": "lcov-result-merger \"coverage/*.info\" \"coverage/lcov.info\"",
     "----------------------------------------- local test dbs ------------------------------------------": "",
-    "start-mariadb": "bash dev/mariadb/10.3/start.sh",
-    "start-mysql": "bash dev/mysql/5.7/start.sh",
-    "start-mysql-8": "bash dev/mysql/8.0/start.sh",
-    "start-postgres": "bash dev/postgres/10/start.sh",
+    "start-mariadb-oldest": "bash dev/mariadb/oldest/start.sh",
+    "start-mariadb-latest": "bash dev/mariadb/latest/start.sh",
+    "start-mysql-oldest": "bash dev/mysql/oldest/start.sh",
+    "start-mysql-latest": "bash dev/mysql/latest/start.sh",
+    "start-postgres-oldest": "bash dev/postgres/oldest/start.sh",
+    "start-postgres-latest": "bash dev/postgres/latest/start.sh",
     "start-mssql-oldest": "bash dev/mssql/oldest/start.sh",
     "start-mssql-latest": "bash dev/mssql/latest/start.sh",
-    "start-db2": "bash dev/db2/11.5/start.sh",
-    "stop-mariadb": "bash dev/mariadb/10.3/stop.sh",
-    "stop-mysql": "bash dev/mysql/5.7/stop.sh",
-    "stop-mysql-8": "bash dev/mysql/8.0/stop.sh",
-    "stop-postgres": "bash dev/postgres/10/stop.sh",
-    "stop-mssql-oldest": "bash dev/mssql/oldest/stop.sh",
-    "stop-mssql-latest": "bash dev/mssql/latest/stop.sh",
-    "stop-db2": "bash dev/db2/11.5/stop.sh",
-    "restart-mariadb": "yarn start-mariadb",
-    "restart-mysql": "yarn start-mysql",
-    "restart-postgres": "yarn start-postgres",
-    "restart-mssql-oldest": "yarn start-mssql-oldest",
-    "restart-mssql-latest": "yarn start-mssql-latest",
-    "restart-db2": "yarn start-db2",
-    "----------------------------------------- local tests ---------------------------------------------": "",
+    "start-db2-oldest": "bash dev/db2/oldest/start.sh",
+    "start-db2-latest": "bash dev/db2/latest/start.sh",
+    "start-oldest": "concurrently \"npm:start-*(!db2)-oldest\" && npm run start-db2-oldest",
+    "start-latest": "concurrently \"npm:start-*(!db2)-latest\" && npm run start-db2-latest",
+    "stop-mariadb": "bash dev/mariadb/oldest/stop.sh; bash dev/mariadb/latest/stop.sh",
+    "stop-mysql": "bash dev/mysql/oldest/stop.sh; bash dev/mysql/latest/stop.sh",
+    "stop-postgres": "bash dev/postgres/oldest/stop.sh; bash dev/postgres/latest/stop.sh",
+    "stop-mssql": "bash dev/mssql/oldest/stop.sh; bash dev/mssql/latest/stop.sh",
+    "stop-db2": "bash dev/db2/oldest/stop.sh",
+    "stop-all": "concurrently \"npm:stop-*(!all|db2)\" && npm run stop-db2",
+    "----------------------------------------- unit tests ---------------------------------------------": "",
     "test-unit-mariadb": "cross-env DIALECT=mariadb yarn test-unit",
     "test-unit-mysql": "cross-env DIALECT=mysql yarn test-unit",
     "test-unit-postgres": "cross-env DIALECT=postgres yarn test-unit",
@@ -237,6 +236,7 @@
     "test-unit-ibmi": "cross-env DIALECT=ibmi yarn test-unit",
     "test-unit-snowflake": "cross-env DIALECT=snowflake yarn test-unit",
     "test-unit-all": "yarn test-unit-mariadb && yarn test-unit-mysql && yarn test-unit-postgres && yarn test-unit-postgres-native && yarn test-unit-mssql && yarn test-unit-sqlite && yarn test-unit-snowflake && yarn test-unit-db2 && yarn test-unit-ibmi",
+    "----------------------------------------- integration tests ---------------------------------------------": "",
     "test-integration-mariadb": "cross-env DIALECT=mariadb yarn test-integration",
     "test-integration-mysql": "cross-env DIALECT=mysql yarn test-integration",
     "test-integration-postgres": "cross-env DIALECT=postgres yarn test-integration",
@@ -246,6 +246,8 @@
     "test-integration-db2": "cross-env DIALECT=db2 yarn test-integration",
     "test-integration-ibmi": "cross-env DIALECT=ibmi yarn test-integration",
     "test-integration-snowflake": "cross-env DIALECT=snowflake yarn test-integration",
+    "test-integration-all": "yarn test-integration-mariadb && yarn test-integration-mysql && yarn test-integration-postgres && yarn test-integration-postgres-native && yarn test-integration-sqlite && yarn test-integration-mssql && yarn test-integration-db2 && yarn test-integration-ibmi && yarn test-integration-snowflake",
+    "----------------------------------------- all tests ---------------------------------------------": "",
     "test-mariadb": "cross-env DIALECT=mariadb yarn test",
     "test-mysql": "cross-env DIALECT=mysql yarn test",
     "test-sqlite": "cross-env DIALECT=sqlite yarn test",
