--- a/package.json
+++ b/package.json
@@ -216,9 +216,8 @@
     "start-mssql-oldest": "bash dev/mssql/oldest/start.sh",
     "start-mssql-latest": "bash dev/mssql/latest/start.sh",
     "start-db2-oldest": "bash dev/db2/oldest/start.sh",
-    "start-db2-latest": "bash dev/db2/latest/start.sh",
     "start-oldest": "concurrently \"npm:start-*(!db2)-oldest\" && npm run start-db2-oldest",
-    "start-latest": "concurrently \"npm:start-*(!db2)-latest\" && npm run start-db2-latest",
+    "start-latest": "concurrently \"npm:start-*(!db2)-latest\"",
     "stop-mariadb": "bash dev/mariadb/oldest/stop.sh; bash dev/mariadb/latest/stop.sh",
     "stop-mysql": "bash dev/mysql/oldest/stop.sh; bash dev/mysql/latest/stop.sh",
     "stop-postgres": "bash dev/postgres/oldest/stop.sh; bash dev/postgres/latest/stop.sh",
@@ -229,6 +228,7 @@
     "test-unit-mariadb": "cross-env DIALECT=mariadb yarn test-unit",
     "test-unit-mysql": "cross-env DIALECT=mysql yarn test-unit",
     "test-unit-postgres": "cross-env DIALECT=postgres yarn test-unit",
+    "test-unit-postgres-native": "cross-env DIALECT=postgres-native yarn test-unit",
     "test-unit-sqlite": "cross-env DIALECT=sqlite yarn test-unit",
     "test-unit-mssql": "cross-env DIALECT=mssql yarn test-unit",
     "test-unit-db2": "cross-env DIALECT=db2 yarn test-unit",
