--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -1,11 +1,18 @@
 name: "Stale issue handler"
+
 on:
   workflow_dispatch:
   schedule:
     - cron: "0 0 * * *"
 
+permissions:
+  contents: read
+
 jobs:
   stale:
+    permissions:
+      issues: write  # for actions/stale to close stale issues
+      pull-requests: write  # for actions/stale to close stale PRs
     runs-on: ubuntu-latest
     steps:
       - uses: actions/stale@main
