meta: enable renovate on v6 and use meta

--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,9 @@
 {
   "extends": [
     "config:base",
-    ":semanticCommitType(build)",
     ":maintainLockFilesWeekly"
-  ]
+  ],
+  "baseBranches": ["main", "v6"],
+  "semanticCommitType": "meta",
+  "semanticCommitScope": null
 }
