--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,8 @@
 {
   "extends": [
     "config:base",
-    ":semanticCommitType(build)",
     ":maintainLockFilesWeekly"
-  ]
+  ],
+  "semanticCommitType": "meta",
+  "semanticCommitScope": null
 }
