--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,7 @@
-* -lf
+# Set the default behavior, in case people don't have core.autocrlf set.
+* text=auto
+
+# Explicitly declare text files you want to always be normalized and converted
+# to native line endings on checkout.
+*.js text
+*.ts text
