meta: remove test-unit-postgres

--- a/package.json
+++ b/package.json
@@ -228,13 +228,12 @@
     "test-unit-mariadb": "cross-env DIALECT=mariadb yarn test-unit",
     "test-unit-mysql": "cross-env DIALECT=mysql yarn test-unit",
     "test-unit-postgres": "cross-env DIALECT=postgres yarn test-unit",
-    "test-unit-postgres-native": "cross-env DIALECT=postgres-native yarn test-unit",
     "test-unit-sqlite": "cross-env DIALECT=sqlite yarn test-unit",
     "test-unit-mssql": "cross-env DIALECT=mssql yarn test-unit",
     "test-unit-db2": "cross-env DIALECT=db2 yarn test-unit",
     "test-unit-ibmi": "cross-env DIALECT=ibmi yarn test-unit",
     "test-unit-snowflake": "cross-env DIALECT=snowflake yarn test-unit",
-    "test-unit-all": "yarn test-unit-mariadb && yarn test-unit-mysql && yarn test-unit-postgres && yarn test-unit-postgres-native && yarn test-unit-mssql && yarn test-unit-sqlite && yarn test-unit-snowflake && yarn test-unit-db2 && yarn test-unit-ibmi",
+    "test-unit-all": "yarn test-unit-mariadb && yarn test-unit-mysql && yarn test-unit-postgres && yarn test-unit-mssql && yarn test-unit-sqlite && yarn test-unit-snowflake && yarn test-unit-db2 && yarn test-unit-ibmi",
     "----------------------------------------- integration tests ---------------------------------------------": "",
     "test-integration-mariadb": "cross-env DIALECT=mariadb yarn test-integration",
     "test-integration-mysql": "cross-env DIALECT=mysql yarn test-integration",
