--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,8 +81,6 @@ jobs:
         run: yarn test-unit-mysql
       - name: Unit tests (postgres)
         run: yarn test-unit-postgres
-      - name: Unit tests (postgres-native)
-        run: yarn test-unit-postgres-native
       - name: Unit tests (sqlite)
         run: yarn test-unit-sqlite
       - name: Unit tests (mssql)
@@ -160,7 +158,7 @@ jobs:
       - name: Extract artifact
         run: tar -xf install-build-node-${{ matrix.node-version }}.tar
       - name: Install Local DB2 Copy
-        run: yarn start-db2
+        run: yarn start-db2-oldest
       - name: Integration Tests
         run: yarn test-integration
   test-sqlite:
@@ -191,28 +189,16 @@ jobs:
       fail-fast: false
       matrix:
         node-version: [14, 18]
-        postgres-version: [9.5, 10]
+        postgres-version: [oldest, latest]
         minify-aliases: [true, false]
         native: [true, false]
     name: Postgres ${{ matrix.postgres-version }}${{ matrix.native && ' (native)' || '' }} (Node ${{ matrix.node-version }})${{ matrix.minify-aliases && ' (minified aliases)' || '' }}
     runs-on: ubuntu-latest
     needs: [ unit-test, test-typings ]
-    services:
-      postgres:
-        image: sushantdhiman/postgres:${{ matrix.postgres-version }}
-        env:
-          POSTGRES_USER: sequelize_test
-          POSTGRES_DB: sequelize_test
-          POSTGRES_PASSWORD: sequelize_test
-        ports:
-          - 5432:5432
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     env:
-      SEQ_PORT: 5432
       DIALECT: ${{ matrix.native && 'postgres-native' || 'postgres' }}
       SEQ_PG_MINIFY_ALIASES: ${{ matrix.minify-aliases && '1' || '' }}
     steps:
-      - run: PGPASSWORD=sequelize_test psql -h localhost -p 5432 -U sequelize_test sequelize_test -c '\l'
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
@@ -230,6 +216,7 @@ jobs:
       - name: Install pg-native (Node 18)
         run: npm install --no-save --no-audit pg-native
         if: matrix.native && matrix.node-version == 18
+      - run: yarn start-postgres-${{ matrix.postgres-version }}
       - name: Integration Tests
         run: yarn test-integration
   test-mysql-mariadb:
