--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@types/lodash": "4.14.185",
     "@types/mocha": "9.1.1",
     "@types/node": "18.7.9",
+    "@types/pg": "^8.6.5",
     "@types/semver": "7.3.12",
     "@types/sinon": "10.0.13",
     "@types/sinon-chai": "3.2.8",
@@ -94,6 +95,7 @@
     "mariadb": "2.5.6",
     "markdownlint-cli": "0.32.2",
     "mocha": "10.0.0",
+    "moment": "^2.29.4",
     "mysql2": "2.3.3",
     "node-hook": "1.0.0",
     "nyc": "15.1.0",
