meta: ignore dependency updates on oldest Docker and use `meta` type

--- a/renovate.json
+++ b/renovate.json
@@ -1,8 +1,9 @@
 {
   "extends": [
     "config:base",
-    ":maintainLockFilesWeekly"
+    ":maintainLockFilesWeekly",
+    ":semanticCommitTypeAll(meta)",
+    ":semanticCommitScopeDisabled"
   ],
-  "semanticCommitType": "meta",
-  "semanticCommitScope": null
+  "ignorePaths:": "dev/**/oldest/docker-compose.yml"
 }
