--- a/package.json
+++ b/package.json
@@ -244,24 +244,23 @@
     "start-postgres": "bash dev/postgres/10/start.sh",
     "start-mssql": "bash dev/mssql/2019/start.sh",
     "start-db2": "bash dev/db2/11.5/start.sh",
-    "start-oracle": "bash dev/oracle/21-slim/start.sh",
-    "start-oracle-18": "bash dev/oracle/18-slim/start.sh",
-    "start-oracle-21": "bash dev/oracle/21-slim/start.sh",
+    "start-oracle-oldest": "bash dev/oracle/18-slim/start.sh",
+    "start-oracle-latest": "bash dev/oracle/21-slim/start.sh",
     "stop-mariadb": "bash dev/mariadb/10.3/stop.sh",
     "stop-mysql": "bash dev/mysql/5.7/stop.sh",
     "stop-mysql-8": "bash dev/mysql/8.0/stop.sh",
     "stop-postgres": "bash dev/postgres/10/stop.sh",
     "stop-mssql": "bash dev/mssql/2019/stop.sh",
     "stop-db2": "bash dev/db2/11.5/stop.sh",
-    "stop-oracle": "bash dev/oracle/21-slim/stop.sh",
-    "stop-oracle-18": "bash dev/oracle/18-slim/stop.sh",
-    "stop-oracle-21": "bash dev/oracle/21-slim/stop.sh",
+    "stop-oracle-oldest": "bash dev/oracle/18-slim/stop.sh",
+    "stop-oracle-latest": "bash dev/oracle/21-slim/stop.sh",
     "restart-mariadb": "npm run start-mariadb",
     "restart-mysql": "npm run start-mysql",
     "restart-postgres": "npm run start-postgres",
     "restart-mssql": "npm run start-mssql",
     "restart-db2": "npm run start-db2",
-    "restart-oracle": "npm run start-oracle",
+    "restart-oracle-oldest": "npm run start-oracle-oldest",
+    "restart-oracle-latest": "npm run start-oracle-latest",
     "----------------------------------------- local tests ---------------------------------------------": "",
     "test-unit-mariadb": "cross-env DIALECT=mariadb npm run test-unit",
     "test-unit-mysql": "cross-env DIALECT=mysql npm run test-unit",
