--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,11 +70,12 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: yarn install --frozen-lockfile --ignore-engines
-      - name: Install Local Oracle DB
-        - if: matrix.oracle-version == '18'
-          run: yarn start-oracle-oldest
-        - if: matrix.oracle-version == '21'
-          run: yarn start-oracle-latest
+      - if: matrix.oracle-version == '18'
+        name: Install Local Oracle DB 18
+        run: yarn start-oracle-oldest
+      - if: matrix.oracle-version == '21'
+        name: Install Local Oracle DB 21
+        run: yarn start-oracle-latest
       - name: Unit Tests
         run: yarn test-unit
       - name: Integration Tests
