fix(oracle): add support for Oracle DB 18c CI (#15016)
* feat(oracle): add oracle dialect support (#1)

* feat(oracle): add oracle dialect support

* fix: addressing review comments (#7)

* fix: addressing review comments

* fix: minor fixes done (#9)

* fix: minor fixes to the review comments

* fix: merge from sequelize-v6

* fix: enable newly added unit tests for Oracle dialect

* fix: remove dangling comma (#13)

* fix: doc gen is fixed

* fix: autogenerate the primary constraint name (#14)

* fix: autogenerate the primary constraint name

* fix: remove trailing comma

* fix: make changes to ORADERBY as per v6 sync

* fix: move test-unit-oracle above test-unit-all

* fix: rename getInsertQueryReturnIntoBinds to
  populateInsertQueryReturnIntoBinds

* fix: reorder parameters for function populateInsertQueryReturnIntoBinds

* fix: incorporated review comments (#16)

* fix: incorporated review comments

* fix: modify string empty check with !

* feat: support for Oracle DB 18c

* Oracle DB version change

* added stop-oracle for 18

* fix: changes to DB version query

* fix: cleanup

* fix: describetable query fix

* fix: dbVersion to remove round trip and 18.4 json test fix

* fix: removed dbversion

* fix: removed comment

* fix: testing a feature

* fix: testing a feature

* fix: testing a feature

* fix: testing a feature

* fix: testing a feature

* fix: testing a feature

* fix: test

* fix: test

* fix: test

* fix: test

* fix: using semver to coerce version sring

* fix: update to instant client latest version for oracle db 21c

* fix: update to oracledb version in package.json

* fix: update lockfile

* fix: remove duplicate privileges.sql and wait-until-healthy.sh

* fix: changes to start-oracle alias

* fix: changes to start-oracle alias

* fix: changes to start-oracle alias

Co-authored-by: Sudarshan Soma <48428602+sudarshan12s@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,8 +51,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        oracle-version: [18, 21]
         node-version: [10, 18]
-    name: Oracle DB (Node ${{ matrix.node-version }})
+    name: Oracle DB ${{ matrix.oracle-version }} (Node ${{ matrix.node-version }})
     runs-on: ubuntu-latest
     env:
       DIALECT: oracle
@@ -69,8 +70,12 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: yarn install --frozen-lockfile --ignore-engines
-      - name: Install Local Oracle DB
-        run: yarn start-oracle
+      - if: matrix.oracle-version == '18'
+        name: Install Local Oracle DB 18
+        run: yarn start-oracle-oldest
+      - if: matrix.oracle-version == '21'
+        name: Install Local Oracle DB 21
+        run: yarn start-oracle-latest
       - name: Unit Tests
         run: yarn test-unit
       - name: Integration Tests
