meta(oracle): add oracle PR scope

--- a/.github/workflows/pr-title.yml
+++ b/.github/workflows/pr-title.yml
@@ -25,6 +25,7 @@ jobs:
             mariadb
             mssql
             mysql
+            oracle
             postgres
             snowflake
             sqlite
